--- a/new reg page.html
+++ b/new reg page.html
@@ -47,7 +47,7 @@ button{
         <label> phone</label><br>
 
         <input type="tel" id="telp" name="telp" required><br>
-        <label>time for call</label><br>
+        <label>time for calls</label><br>
         <input type="datetime-local" id="time" name="time" required>
         <br><br>
         
